[gd_scene load_steps=7 format=3 uid="uid://51k70pdjnr8x"]

[ext_resource type="Script" path="res://Scripts/PlayerAndCreatures/PlayerExtendsCreature.gd" id="1_frca6"]
[ext_resource type="PackedScene" uid="uid://bjncipjr144kf" path="res://Scenes/Creatures/Creature.tscn" id="1_oyi6b"]
[ext_resource type="PackedScene" uid="uid://d4g5rogm106cr" path="res://Scenes/Skills/Strike.tscn" id="2_65cc6"]
[ext_resource type="Script" path="res://Scripts/PlayerAndCreatures/movementInputComponent.gd" id="2_eephr"]
[ext_resource type="Texture2D" uid="uid://iouh024wqtl4" path="res://Sprites/heroes-warden.png" id="3_g15wy"]
[ext_resource type="PackedScene" uid="uid://cwkrdlxk2utha" path="res://Scenes/Skills/Strong Strike.tscn" id="3_pbg33"]

[node name="Player" instance=ExtResource("1_oyi6b")]
script = ExtResource("1_frca6")
isEnemy = false
isPlayer = true
creatureName = "Player"

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_g15wy")

[node name="Stats" parent="." index="1"]
armor = 30
block = 30

[node name="Strike" parent="Skills" index="0" instance=ExtResource("2_65cc6")]

[node name="StrongStrike" parent="Skills" index="1" instance=ExtResource("3_pbg33")]

[node name="HealthComponent" parent="." index="3"]
health = 50

[node name="Camera2D" type="Camera2D" parent="." index="7"]
zoom = Vector2(2, 2)

[node name="LineOfSightNavigator" type="NavigationAgent2D" parent="." index="8"]
path_desired_distance = 10.0
path_max_distance = 5000.0
navigation_layers = 3
simplify_path = true
simplify_epsilon = 10.0

[node name="MovementInput" type="Node" parent="." index="9"]
script = ExtResource("2_eephr")
